[project]
name = "btc-1m-liquidity-sweep"
version = "0.1.0"
description = "BTC/USD 1-Minute Scalping with 15-Minute Liquidity Sweeps on Coinbase (paper trading)"
requires-python = ">=3.10"

dependencies = [
    "ccxt>=4.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_trading*"]
